# soundtouch-radio-bridge

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  stations.example.toml
.github/workflows/: ci.yml  release.yml
deploy/: docker-compose.example.yml
docs/: bridge-fsm-review.md  soundtouch-behavior.md
examples/: berlin.stations.toml
scripts/: capture_events.py  capture_state.py
src/soundtouch_radio/: __init__.py  bridge.py  cli.py  config.py  diagnostics.py  models.py  output.py  soundtouch.py  web.py
tests/: test_bridge.py  test_cli.py  test_config.py  test_diagnostics.py  test_models.py  test_soundtouch.py  test_web.py
