[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundtouch-radio"
version = "0.2.0a1"
description = "Restore Bose SoundTouch preset buttons to local web radio streams."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "soundtouch-radio contributors" }]
dependencies = [
  "websocket-client>=1.8",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/dani6282/soundtouch-radio-bridge"
Issues = "https://github.com/dani6282/soundtouch-radio-bridge/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
soundtouch-radio = "soundtouch_radio.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
